--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,10 +19,14 @@ security:
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
+            json_login:
+                check_path: api_login
+                
+            logout:
+                path: /logout
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
-
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
