--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
       MERCURE_PUBLIC_URL: https://${SERVER_NAME:-localhost}/.well-known/mercure
       MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
       # The two next lines can be removed after initial installation
-      SYMFONY_VERSION: ${SYMFONY_VERSION:-}
+      SYMFONY_VERSION: v6.4.99
       STABILITY: ${STABILITY:-stable}
     volumes:
       - caddy_data:/data
