--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         "php": ">=8.3.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.1",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
