package: add symfony/profiler-pack
With  docker compose exec php composer req --dev symfony/profiler-pack

--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.56"
+        "symfony/maker-bundle": "^1.56",
+        "symfony/stopwatch": "6.4.*",
+        "symfony/web-profiler-bundle": "6.4.*"
     }
 }
