--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "jms/serializer-bundle": "^5.4",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
