--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.5",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "fakerphp/faker": "^1.23",
         "friendsofsymfony/rest-bundle": "^3.6",
         "jms/serializer-bundle": "^5.4",
         "runtime/frankenphp-symfony": "^0.2.0",
