--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.3.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
@@ -75,6 +74,7 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan-symfony": "*",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
