--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "fakerphp/faker": "^1.23",
+        "friendsofsymfony/rest-bundle": "^3.6",
         "jms/serializer-bundle": "^5.4",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "6.4.*",
