--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,13 +1,14 @@
 # Read the documentation: https://fosrestbundle.readthedocs.io/en/3.x/
 fos_rest:
-  param_fetcher_listener: true
-  allowed_methods_listener: true
-  body_listener: true
-  body_converter:
-    enabled: false
-  view:
-    view_response_listener: true
-  format_listener:
-    rules:
-      - { path: ^/$, prefer_extension: true, fallback_format: json, priorities: [ 'html','json' ] }
-      - { path: ^/*, prefer_extension: true, fallback_format: json, priorities: [ json ] }
+    param_fetcher_listener: true
+    allowed_methods_listener: true
+    body_listener: true
+    body_converter:
+        enabled: false
+    view:
+        view_response_listener: true
+    format_listener:
+        rules:
+            - { path: ^/api/v\d+/doc, prefer_extension: true, fallback_format: json, priorities: [ 'html', '*/*' ] }
+            - { path: ^/$, prefer_extension: true, fallback_format: json, priorities: [ 'html','json' ] }
+            - { path: ^/*, prefer_extension: true, fallback_format: json, priorities: [ json ] }
