--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,7 +31,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/public, roles: PUBLIC_ACCESS }
-        - { path: ^/api, roles: [ ROLE_USER, ROLE_ADMIN ] }
+        - { path: ^/api, roles: [PUBLIC_ACCESS] }
     # - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
 
