--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.0",
         "phpstan/phpstan-symfony": "*",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.4.*",
