--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,7 @@
         "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*",
+        "symplify/easy-coding-standard": "^12.1",
         "zenstruck/foundry": "^1.36"
     }
 }
