package: add aws storage

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fakerphp/faker": "^1.23",
         "friendsofsymfony/rest-bundle": "^3.6",
         "jms/serializer-bundle": "^5.4",
+        "league/flysystem-aws-s3-v3": "^3.25",
         "league/flysystem-bundle": "^3.3",
         "nelmio/api-doc-bundle": "^4.24",
         "runtime/frankenphp-symfony": "^0.2.0",
