--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,13 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Aws\S3\S3Client:
+        arguments:
+            -
+                version: 'latest'
+                region: '%env(resolve:MINIO_REGION)%'
+                endpoint: '%env(resolve:MINIO_ENDPOINT)%'
+                credentials:
+                    key: '%env(resolve:MINIO_ROOT_USER)%'
+                    secret: '%env(resolve:MINIO_ROOT_PASSWORD)%'
