feat: add minio storage

--- a/.env
+++ b/.env
@@ -26,11 +26,11 @@ APP_SECRET=29c5d90ac6f09ea2c70dd8eadd6fd606
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://app:!ChangeMe!@database:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 MINIO_REGION="eu-east-1"
-MINIO_ENDPOINT="127.0.0.1:9000"
+MINIO_ENDPOINT="http://minio:9000"
 MINIO_ROOT_USER="minio"
 MINIO_ROOT_PASSWORD="password"
 MINIO_BUCKET="bild"
