--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "jms/serializer-bundle": "^5.4",
         "league/flysystem-aws-s3-v3": "^3.25",
         "league/flysystem-bundle": "^3.3",
+        "league/flysystem-memory": "^3.25",
         "nelmio/api-doc-bundle": "^4.24",
         "runtime/frankenphp-symfony": "^0.2.0",
         "sensio/framework-extra-bundle": "*",
