--- a/config/packages/test/flysystem.yaml
+++ b/config/packages/test/flysystem.yaml
@@ -2,8 +2,5 @@
 flysystem:
     storages:
         default.storage:
-            adapter: 'aws'
-            options:
-                client: Aws\S3\S3Client
-                bucket: '%env(resolve:MINIO_BUCKET)%'
+            adapter: 'memory'
             
