ci: enable test code coverage

--- a/.env
+++ b/.env
@@ -34,3 +34,5 @@ MINIO_ENDPOINT="http://minio:9000"
 MINIO_ROOT_USER="minio"
 MINIO_ROOT_PASSWORD="password"
 MINIO_BUCKET="bild"
+
+XDEBUG_MODE=coverage
