--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "nelmio/api-doc-bundle": "^4.24",
         "runtime/frankenphp-symfony": "^0.2.0",
         "sensio/framework-extra-bundle": "*",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
