--- a/config/packages/flysystem.yaml
+++ b/config/packages/flysystem.yaml
@@ -2,6 +2,10 @@
 flysystem:
     storages:
         default.storage:
+            adapter: local
+            options:
+                directory: '%kernel.project_dir%/var/storage/local'
+        s3.storage:
             adapter: 'aws'
             options:
                 client: Aws\S3\S3Client
