--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "symfony/validator": "6.4.*",
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "zenstruck/foundry": "^1.37"
     },
     "config": {
         "allow-plugins": {
@@ -99,7 +100,6 @@
         "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*",
-        "symplify/easy-coding-standard": "^12.1",
-        "zenstruck/foundry": "^1.36"
+        "symplify/easy-coding-standard": "^12.1"
     }
 }
