--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,29 +9,35 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+    
     firewalls:
+        token:
+            pattern: ^/api/public/token
+            stateless: true
+            json_login:
+                check_path: api_get_token
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
+        
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        
         main:
             lazy: true
             provider: app_user_provider
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-            json_login:
-                check_path: api_auth_login
-            
-            logout:
-                path: /api/auth/logout
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+    
+    
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/public, roles: PUBLIC_ACCESS }
-        - { path: ^/api, roles: [PUBLIC_ACCESS] }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
     # - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
 
