--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
         name: Run migrations
         run: docker compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
       -
+        name: Create JWT keypair
+        run: docker compose exec -T php bin/console lexik:jwt:generate-keypair
+      -
         name: Run PHPUnit
         run: docker compose exec -T php bin/phpunit
       -
