feat: public file upload

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ node_modules/
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+/public/uploads
