--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,7 +15,7 @@ security:
             pattern: ^/api/public/token
             stateless: true
             json_login:
-                check_path: api_get_token
+                check_path: auth_get_token
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
